replace C2 name by Jadus
